Attempting to resolve issue with section1-title spacing once merged to Master

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -51,13 +51,14 @@
 
 .section1-container {
   .columns(center, center);
-  margin: 12% 5% 5% 5%;
+  margin: 5% 5% 5% 5%;
   width: 90%;
   height: 100%;
   background-color: white;
   color: black;
   .section1-title {
     width: 100%;
+    padding-top: 10%;
     h2 {
       .title-text();
     }
@@ -80,6 +81,7 @@
       text-align: center;
       padding: 40px 20px;
       border: 1px solid #ededed;
+      border-radius: 10px;
       margin: 15px 0px;
       .icons {
         filter: invert(34%) sepia(86%) saturate(5313%) hue-rotate(137deg) brightness(99%) contrast(101%);
@@ -123,6 +125,7 @@
     .featured-news {
       width: 24%;
       margin: 1% 3%;
+      border-radius: 10px;
     }
   }
 }
@@ -145,8 +148,8 @@
     background-color: #FAFAFA;
     border: 2px solid #EEE;
     padding: 2% 0;
-    margin: 4% auto;
-    margin-bottom: 8%;
+    margin: 6% auto;
+    margin-bottom: 10%;
     border-radius: 10px;
 
   }
